--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h2>Exercicios feitos durante o trimestre:</h2>
 
         <ul>
-            <a href="exercicio1/exercicio1.html"><li>Exercicio 1 - "nome do Exercicio"</li></a>
-            <a href="#######"><li>Exercicio 2 - "nome do Exercicio"</li></a>
-            <a href="#######"><li>Exercicio 3 - "nome do Exercicio"</li></a>
+            <a href="exercicio1/exercicio1.html"><li>Exercicio 1 - "soma"</li></a>
+            <a href="exercicio 2/exercicio2.html"><li>Exercicio 2 - "idade"</li></a>
+            <a href="exercicio 3/exercicio3.html"><li>Exercicio 3 - "calculadora + par ou impar"</li></a>
         </ul>
     </main>
     <footer>
